displayed winning msg in msg instead of alert

--- a/dotsnboxes/src/Component/Table/Table.css
+++ b/dotsnboxes/src/Component/Table/Table.css
@@ -12,6 +12,10 @@
   border-spacing:0px;
 }
 
+.msg{
+    margin-top: 20px;
+    text-align: left;
+}
 /* .leftBorder{
     border-left:gr 1px solid;
 } */
